# studio-stage-sync

./: .env  .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: wstudio-bridge-macos.yml
.lovable/: plan.md
native/wstudio-coreaudio-driver/: Info.plist  README.md  build.sh
native/wstudio-desktop-bridge/: Cargo.toml  README.md
native/wstudio-desktop-bridge/src/: main.rs  shm.rs  slot_ring.rs  status_page.html
native/wstudio-plugin/: .gitignore  ARCHITECTURE.md  README.md
public/: wstudio-bg.mp4.asset.json
scripts/: build-wstudio-au.sh  build-wstudio-bridge-app.sh  build-wstudio-helper-pkg.sh  fix-wstudio-xcode-copy-scripts.sh  wstudio-backend-ship.sh  wstudio-verify-session-lookup.sh
src/: App.tsx  index.css  main.tsx
src/components/: AppLayout.tsx  ArtistSearchBar.tsx  AudioEqualizerBackground.tsx  BattleCard.tsx  BattleEffectsOverlay.tsx  BattleLiveComments.tsx  BattleSpeakersBackground.tsx  BattleWinsSheet.tsx  BoostAdOverlay.tsx  BoostSheet.tsx  BottomNav.tsx  CreateBattleSheet.tsx  CreateStudioSheet.tsx  EditProfileSheet.tsx  EditStudioSheet.tsx  FollowersSheet.tsx  GlobalPlaylistPlayer.tsx  GlobalPodcastSession.tsx  GlobalRadioPlayer.tsx  IncognitoFeedWindow.tsx  JhiIcon.tsx  ManageNewsSection.tsx  NewsFeed.tsx  NotificationBell.tsx  PlaylistPlayerSheet.tsx  PlaylistsSection.tsx  ProGateModal.tsx  ProfileFeedSection.tsx  ProfilePostCard.tsx  PromotedBadge.tsx  RadioMoreSheet.tsx  RadioShareSheet.tsx  RateSessionModal.tsx  TakeABreakGate.tsx  TermsAgreementGate.tsx  ThemePickerSheet.tsx  UnratedSessionPopup.tsx  UserProjectsSheet.tsx  VideoPoster.tsx  VoiceoverRecorder.tsx
src/contexts/: AuthContext.tsx  CartContext.tsx  PlaylistContext.tsx  RadioContext.tsx  ThemeContext.tsx
src/hooks/: use-boosts.ts  use-create-post-sheet.ts  use-likes.ts  use-persisted-state.ts  use-pro-gate.ts  use-recording-engine.ts  use-studio-engine.ts  use-take-a-break.ts  useCircleLimits.ts  useFollow.ts  useMessageSound.ts
src/lib/: apply-image-crop.ts  ask-jhi.ts  battle-backgrounds.ts  create-camera.ts  dateHelpers.ts  emoji-characters.ts  feed-items.ts  feed-music.ts  genres.ts  media-cache.ts  overlay-coords.ts  post-editor.ts  r2-storage.ts  sticker-assets.ts  sticker-library.ts  text-styles.ts  userSoundLibrary.ts  verifiedPlus.ts  video-preview.ts
src/pages/: AIStudioPage.tsx  AdminSoundLibraryPage.tsx  AdminTicketsPage.tsx  AnalyticsPage.tsx  ArticlePage.tsx  ArtistProfilePage.tsx  AskJhiPage.tsx  AuthPage.tsx  BattlesPage.tsx  BrowsePodcastsPage.tsx  BrowseSongsPage.tsx  BrowseVideosPage.tsx  CircleHomePage.tsx  EarningsPage.tsx  FeedPage.tsx  HelpDeskPage.tsx  HelpPage.tsx  HomePage.tsx  IdVerification.tsx  LegalVaultPage.tsx  MessagesPage.tsx  MusicBattlePlayerPage.tsx  MyBookingsPage.tsx  MyBoostsPage.tsx  MyPodcastsPage.tsx  MyProjectsPage.tsx  MySongsPage.tsx  MyStorePage.tsx  MyStudiosPage.tsx  MyVideosPage.tsx  NewsCategoryPage.tsx  NewsFeedPage.tsx  PlaylistsPage.tsx  ProfilePage.tsx  ProjectsPage.tsx  PurchasesPage.tsx  RadioPage.tsx  SettingsPage.tsx  StorePage.tsx  StudiosPage.tsx  (+4 more)
src/pages/m/: CircleDetail.tsx  (+16 more)
src/studio/: StudioApp.tsx  studio.css
src/wstudio/: WStudioLayout.tsx  index.ts
supabase/: config.toml
supabase/migrations/: 20260213184211_e42facaa-49d6-4f80-94d4-d38ac25f7f83.sql  20260213203911_da8c0a37-e3ae-4398-a24f-cf3ad6d561d9.sql  20260213205409_b666272c-5594-41fa-974a-bdff9955c1df.sql  20260214013843_96cb30a7-ae9d-4b4b-8bf2-8acf52778884.sql  20260214031150_34e6b0f8-6fbb-4830-a037-540f4b23fec6.sql  20260214122625_d4e03fbf-b467-4def-b17a-ca6c589577e0.sql  20260214143558_aadac8c0-4d30-4fb1-a042-a85d3b672adb.sql  20260214155301_8cfe9140-19ef-497c-8d1f-1ab774f30e00.sql  20260214182243_245a7bb1-dcea-42d5-9980-76bddc3c06af.sql  20260214201122_b0b47bf2-7891-49b7-bf7d-9c1ea7557aa7.sql  20260214201204_78621a3a-878a-41c4-9282-4998a0113ed5.sql  20260215140548_17166273-0926-4be9-8592-466e17b6e409.sql  20260215191354_2952d16c-76ec-47cd-9d12-6aa79e5f6c2c.sql  20260215201854_27bc70c0-9690-4fc9-99ac-40e8a6f8dcc6.sql  20260215230330_f7dbec59-7ae0-41f5-9f48-cab704da229a.sql  (+47 more)
(+290 files in other folders)
