[package]
name = "wstudio-desktop-bridge"
version = "0.2.0"
edition = "2021"
description = "W.STUDIO Helper App — menubar agent that receives engineer-side artist audio over HTTP and feeds the W.STUDIO Artist Input virtual CoreAudio device."
license = "UNLICENSED"
publish = false

# macOS .app bundle — build with: bash ../../scripts/build-wstudio-helper-pkg.sh
[package.metadata.bundle]
name = "W.STUDIO Helper"
identifier = "com.wheuat.wstudio.helper"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png"]
version = "0.2.0"
copyright = "Copyright (c) Wheuat LLC. All rights reserved."
category = "public.app-category.music"
short_description = "Routes W.STUDIO session audio to your DAW."
long_description = "Menubar helper that receives live artist audio from the W.STUDIO web session and writes it into the 'W.STUDIO Artist Input' virtual CoreAudio device so any DAW can record it."
osx_minimum_system_version = "11.0"
# LSUIElement = menubar agent, no Dock icon.
osx_info_plist_exts = ["Info.plist.extra"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
once_cell = "1"
libc = "0.2"

# Menubar tray (macOS).
[target.'cfg(target_os = "macos")'.dependencies]
tao = "0.30"
tray-icon = "0.19"
muda = "0.15"
